--- a/Lab1/app/src/main/res/layout/item_car.xml
+++ b/Lab1/app/src/main/res/layout/item_car.xml
@@ -8,6 +8,8 @@
     app:cardCornerRadius="8dp"
     android:layout_margin="8dp">
 
+    <!-- Макет внутри списка -->
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
